fix: props and storybook control visibility

--- a/src/components/global/localNav/localNavLink.scss
+++ b/src/components/global/localNav/localNavLink.scss
@@ -285,8 +285,6 @@ a {
   }
 }
 
-/* ——— AI-connected variant ——— */
-
 .ai-connected-true {
   a {
     color: var(--kd-color-text-level-primary);
@@ -301,6 +299,7 @@ a {
     &:focus-visible {
       background: var(--kd-color-background-menu-state-ai-open);
       color: var(--kd-color-text-level-light);
+      outline-color: var(--kd-color-background-button-secondary-ai-focused);
     }
 
     &:active:not(.link-disabled) {
